Correct spacing on charts for FAB theme

--- a/themes/fab/style.css
+++ b/themes/fab/style.css
@@ -61,8 +61,9 @@ img.block {
 	height:20px;
 	vertical-align:middle;
 }
-.line1, .line3 {vertical-align:bottom;} 
-.line2, .line4 {vertical-align:middle;}
+
+.line1, .line2, .line3 {vertical-align:bottom;} 
+.line4 {vertical-align:middle;}
 .line5 {vertical-align:top;}
 
 legend {
@@ -254,7 +255,11 @@ html[dir='rtl'] .makeMenu li ul li {
 	font: 13px  arial;
 }
 
-.person_box, .person_boxF, person_boxNN {min-height:45px;}
+.person_box, .person_boxF, .person_boxNN {margin: 0 0 0 3px;}
+
+
+html[dir='rtl'] .person_box html[dir='rtl'] .person_boxF html[dir='rtl'] .person_boxNN {margin: 0 3px 0 0;}
+
 
 .action_headerF {background: #FDD;}
 .action_header {background: #DDF;}
@@ -605,6 +610,7 @@ right:10px;
 	padding-right:0;
 	padding-bottom:0;
 }
+li .person_box, li .person_boxF {margin: 3px 0 3px 0;}
 
 /*-- descendancy chart rtl specific stylesheets --*/
 html[dir='rtl'] #descendancy_chart ul {
